Fixed z-index for notification.

--- a/main.css
+++ b/main.css
@@ -448,7 +448,7 @@ ul   > li {
 
 #notification {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 20px;
     right: 20px;
     border: 1px solid black;
